ajout background + linkedin dev

--- a/public/style.css
+++ b/public/style.css
@@ -10,12 +10,20 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #3b3b3b;
+    color: #1b1b1b;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
 #footer {
-    background: #3b3b3b;
+    background:
+    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+    background-size: 20px 20px;
 }
 #footer h5{
 	padding-left: 10px;
@@ -87,6 +95,7 @@ section .section-title {
 
 .fa-youtube-play {
     color: #e52d27;
+    
 }
 
 .fa-rss {
@@ -109,6 +118,7 @@ section .section-title {
     opacity: 0.7;
     transition: 1s;
     -webkit-transition: 1s;
+
 }
 
 .fa:hover{
