--- a/public/style.css
+++ b/public/style.css
@@ -95,13 +95,11 @@ background-size:100px 50px;
 
 .fa-facebook {
     color: #3B5998;
-
     margin-left: 40px;
 }
 
 .fa-youtube-play {
     color: #e52d27;
-    
 }
 
 .fa-spotify {
@@ -131,6 +129,20 @@ background-size:100px 50px;
     float: right;
     width: 150px;
     height: 150px;
+    margin-top: 23px;
+    margin-right: 30px;
+    -webkit-transition: all 1.5s ease;
+    transition: all 1.5s ease;
+    opacity: 0.7;  
+    -webkit-transform: rotate(20deg) scale(1);
+	transform: rotate(20deg) scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+#school:hover{
+    opacity: 1;
+    -webkit-transform: rotate(-10deg) scale(1.2);
+	transform: rotate(-10deg) scale(1.2);
 }
 #pff{
     text-align: center;
@@ -139,11 +151,8 @@ background-size:100px 50px;
     margin-top: 10px;
 }
 #pf{
-    color: #8d8d8d;
+    color: #afafaf;
     text-align: center;
     margin-top: 30px;
 }
-#school{
-    margin-top: 23px;
-    margin-right: 10px;
-}
+
