--- a/public/style.css
+++ b/public/style.css
@@ -3,11 +3,31 @@ h5{
 }
 .card-body{
   text-align: center;
-
 }
 .card-text{
   text-align: justify;
 }
 #titre{
   text-align: center;
+}
+#card_sponsor{
+  text-align: center;
+}
+.card-title{
+  color : #08aeac;
+}
+.card-text{
+  text-align: center;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
 }
