--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,6 @@
 h5{
   color : #009933;
 }
-.card-body{
-  text-align: center;
-}
-.card-text{
-  text-align: justify;
-}
-#titre{
-  text-align: center;
-}
 #card_sponsor{
   text-align: center;
 }
@@ -19,15 +10,18 @@ h5{
 .card-text{
   text-align: center;
 }
-
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+.card-text{
+  margin: 40px;
+}
+.card-block{
+  margin: 60px;
+  margin-bottom: 60px;
+  margin-left : 60px;
+  margin-right: 60px;
 }
