--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,10 @@
-h5{
-  color : #009933;
-}
-#card_sponsor{
-  text-align: center;
-}
 .card-title{
   color : #08aeac;
+  text-align: center;
 }
 .card-text{
   text-align: center;
+  margin: 40px;
 }
 .center {
   display: block;
@@ -16,11 +12,8 @@ h5{
   margin-right: auto;
   width: 50%;
 }
-.card-text{
-  margin: 40px;
-}
 .card-block{
-  margin: 60px;
+  margin-top: 60px;
   margin-bottom: 60px;
   margin-left : 60px;
   margin-right: 60px;
