--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,16 @@
   width: auto;
   height: 381px;
   box-shadow: 1px 1px 12px #555;
-}
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+  }
+  .imgfaq:hover {
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
+  }
+
 
 .question{
   text-align: center;
@@ -17,7 +26,7 @@
   background: linear-gradient(#ffffff, #616161);
 }
 .question:nth-child(2){
-  background: linear-gradient(#ff2828, #7e89ff);
+  background: linear-gradient(#ff4141, #7e89ff);
   
 }
 .question:nth-child(4){
