--- a/public/style.css
+++ b/public/style.css
@@ -21,24 +21,33 @@
 .question{
   text-align: center;
   color: rgb(255, 255, 255);
-  font-size: 30px;
+  font-size: 25px;
   padding-top: 40px;
   padding-bottom: 20px;
   background: linear-gradient(#202020, #000000);
+  border: 3px solid transparent;
+  border-image: linear-gradient(to right, #ff0000 20%,#ff662a 30%, #ffffff 61%, #424242 100%);
+  border-image-slice: 1;
+
 }
 .question:nth-child(2){
   background: linear-gradient(#808080, #606060);
-  
+  border: 3px solid transparent;
+	border-image: linear-gradient(to right, #19850b 0%,#3cff00 30%, #b3c001 41%, #fffb0d 100%);
+	border-image-slice: 1;
 }
 .question:nth-child(4){
   background: linear-gradient(#606060, #404040);
+  border: 3px solid transparent;
+	border-image: linear-gradient(to right, #ff0000 20%,#ff7b00 30%, #0059ff 61%, #00b7ff 100%);
+	border-image-slice: 1;
 }
 .question:nth-child(6){
   background: linear-gradient(#404040, #202020);
+  border: 3px solid transparent;
+	border-image: linear-gradient(to right, #ed22ff 20%,#9500eb 30%, #0f0097 61%, #365bff 100%);
+	border-image-slice: 1;
 }
 .pfaq{
-  font-size: 60px;
-}
-hr{
-    border: wheat
+  font-size: 50px;
 }
